--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,18 +53,18 @@
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
+  --foreground: oklch(0.3485 0 0);
+  --card: oklch(0.9731 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
+  --primary: oklch(0.7923 0.2028 150.66);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.9748 0.0238 159.16);
+  --secondary-foreground: oklch(0.7923 0.2028 150.66);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: oklch(0.6585 0.191 23.99);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
@@ -132,4 +132,7 @@
   /* .model-viewer {
     height: 100vh;
   } */
+  .text-gray-500 {
+    color: #515151;
+  }
 }
